# cascade-routing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/selection/: api.html  base_algorithm.html  base_computer.html  baseline_cascader.html  cascade_router.html  classification.html  code_math.html  completion_llms.html  cost_computer.html  index.html  lambda_strategy.html  open_form.html  quality_computer.html  router.html  statistics.html  swebench.html  utils.html
notebooks/: postprocess.ipynb  test_classification_quality.ipynb  test_open_form_quality.ipynb  try.ipynb
scripts/: classification.py  classification_inference.py  code_math.py  free_form.py  free_form_inference.py  generate.sh  main.sh  preprocess.py  routerbench.py  routerbench_ablation.sh  routerbench_times.py  runtime.py  swebench_run.py
scripts/other/: livecodebench.py  livecodebench.sh  minerva.py  minerva.sh  swebench.py  swebench.sh
src/selection/: __init__.py  api.py  base_algorithm.py  base_computer.py  baseline_cascader.py  cascade_router.py  classification.py  code_math.py  completion_llms.py  cost_computer.py  lambda_strategy.py  open_form.py  quality_computer.py  router.py  statistics.py  swebench.py  utils.py
src/selection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
