[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selection"
version = "1.0.0"
authors = [
  { name="Jasper Dekoninck", email="jasper.dekoninck@inf.ethz.ch" },
]
description = "Model Selection Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "aiohttp >= 3.9.1",
  "aiosignal >= 1.3.1",
  "datasets >= 2.16.0",
  "ipykernel>=6.26.0",
  "loguru >= 0.7.2",
  "matplotlib >= 3.8.2",
  "numpy >= 1.24.3",
  "openai >= 1.6.1",
  "pandas >= 2.1.4",
  "scikit-learn >= 1.3.2",
  "seaborn >= 0.13.0",
  "torch >= 2.1.2",
  "tqdm >= 4.66.1",
  "transformers >= 4.36.2",
  "langchain >= 0.2.12",
  "langchain-anthropic >= 0.1.22",
  "langchain-google-genai >= 1.0.8",
  "langchain-openai >= 0.1.21",
  "langchain-together >= 0.1.5",
  "scipy >= 1.14.1",
  "hyperopt >= 0.2.7",
  "sentence_transformers >= 3.0.1"

]
